fixing table spacing issues on popup

--- a/app/assets/stylesheets/workflows.css.scss
+++ b/app/assets/stylesheets/workflows.css.scss
@@ -92,7 +92,7 @@ a.link_no_underline:hover {
 }
 
 #popup_save_ecosystem_modifications, #popup_discard_ecosystem_modifications {
-  margin: 0px 0px 0px 150px;
+  margin: 0px 10px 0px 0px;
 }
 
 
